--- a/app/src/main/res/layout/joinqueue.xml
+++ b/app/src/main/res/layout/joinqueue.xml
@@ -7,16 +7,19 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/textView2"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <Button
         android:id="@+id/enrollButton"
+        android:inputType="text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Enroll in Queue" />
